--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ vulkano-win = "0.32.0"
 winit = "0.27.5"
 bytemuck = "1.13.0"
 vulkano-shaders = "0.32.0"
-cgmath = "0.18.0"
+nalgebra = "0.32.1"
+angle = "0.5.0"
 rapier3d = { version = "0.17.1", features = [ "simd-stable" ] }
 bevy_ecs = "0.9.1"
