--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-vulkano = "0.32.3"
+vulkano = { version = "0.32.3", features = ["nalgebra"]}
 vulkano-win = "0.32.0"
 winit = "0.27.5"
 bytemuck = "1.13.0"
