--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ nalgebra = "0.32.1"
 angle = "0.5.0"
 rapier3d = { version = "0.17.1", features = [ "simd-stable" ] }
 bevy_ecs = "0.10.0"
-gltf = "1.1.0"
+gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
