--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-vulkano = { version = "0.32.3", features = ["nalgebra"]}
+vulkano = { version = "0.32.3", features = []}
 vulkano-win = "0.32.0"
 winit = "0.27.5"
 bytemuck = "1.13.0"
@@ -12,6 +12,6 @@ vulkano-shaders = "0.32.0"
 nalgebra = {version = "0.32.1", features = ["macros"] }
 angle = "0.5.0"
 rapier3d = { version = "0.17.1", features = [ "simd-stable" ] }
-bevy_ecs = "0.10.0"
+bevy_ecs = { version = "0.10.0" }
 gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
