--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ rapier3d = { version = "0.17.1", features = [ "simd-stable" ] }
 bevy_ecs = { version = "0.10.0" }
 gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
+tracing-chrome = { version = "0.7.1", optional = true }
+tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
+
+[features]
+default = ["trace"]
+trace = [ "dep:tracing-chrome", "dep:tracing-subscriber", "bevy_ecs/trace" ]
