--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,11 @@ tracing-chrome = { version = "0.7.1", optional = true }
 tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
 tracing-log = { version = "0.1.3", optional = true }
 tracing-error = { version = "0.2.0", optional = true }
+tracing-tracy = { version = "0.10.0", optional = true }
 
 [features]
-default = ["trace"]
-trace = [ "dep:tracing-chrome", "dep:tracing-subscriber", "dep:tracing-log", "dep:tracing-error", "bevy_ecs/trace", "bevy_utils/detailed_trace" ]
+default = []
+trace = ["tracing-core", "tracing-tracy"]
+tracing-core = [ "dep:tracing-subscriber", "dep:tracing-log", "dep:tracing-error",  "bevy_ecs/trace", "bevy_utils/detailed_trace" ]
+tracing-chrome = ["dep:tracing-chrome"]
+tracing-tracy = ["dep:tracing-tracy"]
