--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ bytemuck = "1.13.0"
 vulkano-shaders = "0.32.0"
 nalgebra = {version = "0.32.1", features = ["macros"] }
 angle = "0.5.0"
-rapier3d = { version = "0.17.1", features = [ "simd-stable" ] }
+rapier3d = { version = "0.17.1", features = [ "simd-stable", "debug-render" ] }
 bevy_ecs = { version = "0.10.0" }
 bevy_utils = { version = "0.10.0" }
 gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
