--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ nalgebra = {version = "0.32.1", features = ["macros"] }
 angle = "0.5.0"
 rapier3d = { version = "0.17.1", features = [ "simd-stable", "debug-render" ] }
 bevy_ecs = { version = "0.10.0" }
-bevy_utils = { version = "0.10.0" }
 gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 
+bevy_utils = { version = "0.10.0", optional = true, features = ["detailed_trace"] }
 tracing-chrome = { version = "0.7.1", optional = true }
 tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
 tracing-log = { version = "0.1.3", optional = true }
@@ -27,6 +27,12 @@ tracing-tracy = { version = "0.10.0", optional = true }
 [features]
 default = []
 trace = ["tracing-core", "tracing-tracy"]
-tracing-core = [ "dep:tracing-subscriber", "dep:tracing-log", "dep:tracing-error",  "bevy_ecs/trace", "bevy_utils/detailed_trace" ]
+tracing-core = [
+  "dep:bevy_utils", 
+  "dep:tracing-subscriber", 
+  "dep:tracing-log", 
+  "dep:tracing-error", 
+  "bevy_ecs/trace",
+]
 tracing-chrome = ["dep:tracing-chrome"]
 tracing-tracy = ["dep:tracing-tracy"]
