--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ default-run = "cat-to-the-past"
 vulkano = { version = "0.32.3", features = []}
 vulkano-win = "0.32.0"
 winit = "0.27.5"
-bytemuck = "1.13.0"
+bytemuck = "1.13.1"
 vulkano-shaders = "0.32.0"
-nalgebra = {version = "0.32.1", features = ["macros"] }
+nalgebra = {version = "0.32.2", features = ["macros"] }
 angle = "0.5.0"
-rapier3d = { version = "0.17.1", features = [ "simd-stable", "debug-render" ] }
+rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
 bevy_ecs = { version = "0.10.0" }
 gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
+image = { version = "0.24.5", default-features = false }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 
 bevy_utils = { version = "0.10.0", optional = true, features = ["detailed_trace"] }
@@ -22,7 +23,7 @@ tracing-chrome = { version = "0.7.1", optional = true }
 tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
 tracing-log = { version = "0.1.3", optional = true }
 tracing-error = { version = "0.2.0", optional = true }
-tracing-tracy = { version = "0.10.0", optional = true }
+tracing-tracy = { version = "0.10.2", optional = true }
 
 [features]
 default = []
