--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ nalgebra = {version = "0.32.2", features = ["macros"] }
 angle = "0.5.0"
 rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
 bevy_ecs = { version = "0.10.0" }
-gltf = { version = "1.1.0", features = ["extras", "names", "KHR_lights_punctual"] }
+gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_strength", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
 image = { version = "0.24.5", default-features = false }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 
@@ -37,3 +37,6 @@ tracing-core = [
 ]
 tracing-chrome = ["dep:tracing-chrome"]
 tracing-tracy = ["dep:tracing-tracy"]
+
+[profile.dev]
+opt-level = 1
