--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bevy_ecs = { version = "0.10.1" }
 gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_strength", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
 image = { version = "0.24.6", default-features = false }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
+crossbeam = "0.8.2"
 
 bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
 tracing-chrome = { version = "0.7.1", optional = true }
