--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -12,7 +12,7 @@ vulkano = { version = "0.33.0", features = []}
 vulkano-win = "0.33.0"
 winit = "0.28"
 vulkano-shaders = "0.33.0"
-nalgebra = {version = "0.32.2", features = ["macros"] }
+nalgebra = {version = "0.32.2" }
 angle = "0.5.0"
 rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
 bevy_ecs = { version = "0.10.1" }
@@ -20,6 +20,7 @@ gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_
 image = { version = "0.24.6", default-features = false }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 crossbeam = "0.8.2"
+math = { path = "../math" }
 
 bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
 tracing-chrome = { version = "0.7.1", optional = true }
