--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -20,9 +20,11 @@ gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_
 image = { version = "0.24.6", default-features = false }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 crossbeam = "0.8.2"
+
 math = { path = "../math" }
 windowing = { path = "../windowing" }
 core = { path = "../core" }
+scene = { path = "../scene" }
 
 bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
 tracing-chrome = { version = "0.7.1", optional = true }
