--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -23,23 +23,8 @@ crossbeam = "0.8.2"
 math = { path = "../math" }
 windowing = { path = "../windowing" }
 core = { path = "../core" }
-
-bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
-tracing-chrome = { version = "0.7.1", optional = true }
-tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
-tracing-log = { version = "0.1.3", optional = true }
-tracing-error = { version = "0.2.0", optional = true }
-tracing-tracy = { version = "0.10.2", optional = true }
+debug = { path = "../debug" }
 
 [features]
-default = []
-trace = ["tracing-core", "tracing-tracy"]
-tracing-core = [
-  "dep:bevy_utils", 
-  "dep:tracing-subscriber", 
-  "dep:tracing-log", 
-  "dep:tracing-error", 
-  "bevy_ecs/trace",
-]
-tracing-chrome = ["dep:tracing-chrome"]
-tracing-tracy = ["dep:tracing-tracy"]
+default = ["trace"]
+trace = ["debug/trace"]
