Disable trace feature

--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -28,5 +28,5 @@ debug = { path = "../debug" }
 scene = { path = "../scene" }
 
 [features]
-default = ["trace"]
+default = []
 trace = ["debug/trace"]
