--- a/game_core/Cargo.toml
+++ b/game_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core"
+name = "game_core"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,3 +9,4 @@ edition = "2021"
 bevy_ecs = { version = "0.10.1" }
 angle = "0.5.0"
 nalgebra = {version = "0.32.2" }
+uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
