--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -14,11 +14,10 @@ winit = "0.28"
 vulkano-shaders = "0.33.0"
 nalgebra = {version = "0.32.2" }
 angle = "0.5.0"
-rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
 bevy_ecs = { version = "0.10.1" }
 gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_strength", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
-image = { version = "0.24.6", default-features = false }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
+rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
 crossbeam = "0.8.2"
 
 math = { path = "../math" }
@@ -26,6 +25,7 @@ windowing = { path = "../windowing" }
 game_core = { path = "../game_core" }
 debug = { path = "../debug" }
 scene = { path = "../scene" }
+physics = { path = "../physics" }
 
 [features]
 default = []
