--- a/render/Cargo.toml
+++ b/render/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "scene"
+name = "render"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = { version = "0.10.1" }
-nalgebra = {version = "0.32.2" }
-
-math = { path = "../math" }
