--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -25,6 +25,7 @@ debug = { path = "../debug" }
 scene = { path = "../scene" }
 physics = { path = "../physics" }
 input = { path = "../input" }
+render = { path = "../render" }
 
 [features]
 default = []
