--- a/render/Cargo.toml
+++ b/render/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+vulkano = { version = "0.33.0", features = []}
+vulkano-win = "0.33.0"
+winit = "0.28"
+vulkano-shaders = "0.33.0"
+nalgebra = {version = "0.32.2" }
+bevy_ecs = { version = "0.10.1" }
+
+math = { path = "../math" }
+game_core = { path = "../game_core" }
+scene = { path = "../scene" }
