--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -8,10 +8,7 @@ default-run = "game"
 
 
 [dependencies]
-vulkano = { version = "0.33.0", features = []}
-vulkano-win = "0.33.0"
 winit = "0.28"
-vulkano-shaders = "0.33.0"
 nalgebra = {version = "0.32.2" }
 angle = "0.5.0"
 bevy_ecs = { version = "0.10.1" }
@@ -28,5 +25,5 @@ input = { path = "../input" }
 render = { path = "../render" }
 
 [features]
-default = []
+default = ["trace"]
 trace = ["debug/trace"]
