--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -12,7 +12,6 @@ winit = "0.28"
 nalgebra = {version = "0.32.2" }
 angle = "0.5.0"
 bevy_ecs = { version = "0.10.1" }
-gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_strength", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 
 math = { path = "../math" }
@@ -23,6 +22,7 @@ scene = { path = "../scene" }
 physics = { path = "../physics" }
 input = { path = "../input" }
 render = { path = "../render" }
+scene_loader = { path = "../scene_loader"}
 
 [features]
 default = ["trace"]
