--- a/windowing/Cargo.toml
+++ b/windowing/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 winit = "0.28"
-image = { version = "0.24.6", default-features = false }
+image = { version = "0.24.6", default-features = false, features = ["png"] }
