Use serde to parse scene extras

--- a/scene_loader/Cargo.toml
+++ b/scene_loader/Cargo.toml
@@ -14,3 +14,5 @@ game_core = { path = "../game_core" }
 math = { path = "../math" }
 physics = { path = "../physics" }
 scene = { path = "../scene" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
