--- a/animations/Cargo.toml
+++ b/animations/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scene"
+name = "animations"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,5 @@ edition = "2021"
 
 [dependencies]
 bevy_ecs.workspace = true
-nalgebra.workspace = true
-
-math = { path = "../math" }
+scene = { path = "../scene" }
 game_core = { path = "../game_core" }
