--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = { version = "0.10.1" }
+bevy_ecs.workspace = true
 
 bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
 tracing-chrome = { version = "0.7.1", optional = true }
