--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = { version = "0.10.1" }
-nalgebra = {version = "0.32.2" }
+bevy_ecs.workspace = true
+nalgebra.workspace = true
 
 game = { path = "../game" }
 game_core = { path = "../game_core" }
