--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -9,9 +9,9 @@ default-run = "game"
 
 [dependencies]
 winit = "0.28"
-nalgebra = {version = "0.32.2" }
+nalgebra.workspace = true
 angle = "0.5.0"
-bevy_ecs = { version = "0.10.1" }
+bevy_ecs.workspace = true
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
 
 math = { path = "../math" }
