--- a/game_core/Cargo.toml
+++ b/game_core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = { version = "0.10.1" }
+bevy_ecs.workspace = true
 angle = "0.5.0"
-nalgebra = {version = "0.32.2" }
+nalgebra.workspace = true
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
