--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_ecs = { version = "0.10.1" }
-nalgebra = {version = "0.32.2" }
+bevy_ecs.workspace = true
+nalgebra.workspace = true
 rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
 crossbeam = "0.8.2"
 
