--- a/render/Cargo.toml
+++ b/render/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["dylib"]
+
 [dependencies]
 vulkano = { version = "0.33.0", features = []}
 vulkano-win = "0.33.0"
