Add dependency for animations crate to game crate

--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -23,6 +23,7 @@ physics = { path = "../physics" }
 input = { path = "../input" }
 render = { path = "../render" }
 scene_loader = { path = "../scene_loader"}
+animations = { path = "../animations"}
 
 [features]
 default = []
