--- a/render/Cargo.toml
+++ b/render/Cargo.toml
@@ -17,3 +17,5 @@ bevy_ecs.workspace = true
 math = { path = "../math" }
 game_core = { path = "../game_core" }
 scene = { path = "../scene" }
+app = { path = "../app" }
+windowing = { path = "../windowing" }
