--- a/windowing/Cargo.toml
+++ b/windowing/Cargo.toml
@@ -6,7 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "0.28"
 image = { version = "0.24.6", default-features = false, features = ["png"] }
 bevy_ecs.workspace = true
 app = { path = "../app" }
+
+[target.'cfg(windows)'.dependencies]
+winit = { version = "0.28", default-features = false }
+
+[target.'cfg(not(windows))'.dependencies]
+winit = { version = "0.28" }
