--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -11,7 +11,7 @@ default-run = "game"
 nalgebra.workspace = true
 angle = "0.5.0"
 bevy_ecs.workspace = true
-uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}
+uuid.workspace = true
 
 math = { path = "../math" }
 windowing = { path = "../windowing" }
