--- a/game_core/Cargo.toml
+++ b/game_core/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2021"
 bevy_ecs.workspace = true
 angle = "0.5.0"
 nalgebra.workspace = true
-uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
+uuid.workspace = true
 app = { path = "../app" }
