--- a/scene/Cargo.toml
+++ b/scene/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy_ecs.workspace = true
 nalgebra.workspace = true
+uuid.workspace = true
+angle = "0.5.0"
 
 math = { path = "../math" }
-game_core = { path = "../game_core" }
