--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 bevy_ecs.workspace = true
+tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
 
 bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
 tracing-chrome = { version = "0.7.1", optional = true }
-tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
 tracing-log = { version = "0.1.3", optional = true }
 tracing-error = { version = "0.2.0", optional = true }
 tracing-tracy = { version = "0.10.2", optional = true }
@@ -20,8 +20,7 @@ tracing-tracy = { version = "0.10.2", optional = true }
 default = []
 trace = ["tracing-core", "tracing-tracy"]
 tracing-core = [
-  "dep:bevy_utils", 
-  "dep:tracing-subscriber", 
+  "dep:bevy_utils",
   "dep:tracing-log", 
   "dep:tracing-error", 
   "bevy_ecs/trace",
