--- a/render/Cargo.toml
+++ b/render/Cargo.toml
@@ -11,6 +11,7 @@ vulkano = { version = "0.33.0", features = []}
 vulkano-win = "0.33.0"
 winit = "0.28"
 vulkano-shaders = "0.33.0"
+angle = "0.5.0"
 nalgebra.workspace = true
 bevy_ecs.workspace = true
 
