--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -14,4 +14,5 @@ app = { path = "../app" }
 game_core = { path = "../game_core" }
 physics = { path = "../physics" }
 scene = { path = "../scene" }
+scene_loader = { path = "../scene_loader" }
 math = { path = "../math" }
