Animations go brr

--- a/animations/Cargo.toml
+++ b/animations/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 bevy_ecs.workspace = true
 scene = { path = "../scene" }
 game_core = { path = "../game_core" }
+app = { path = "../app" }
