--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -11,7 +11,7 @@ nalgebra.workspace = true
 
 game = { path = "../game" }
 app = { path = "../app" }
-game_core = { path = "../game_core" }
+time = { path = "../time" }
 physics = { path = "../physics" }
 scene = { path = "../scene" }
 loader = { path = "../loader" }
