--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,16 +14,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: dtolnay/rust-toolchain@nightly
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --timings
-    - name: Clean game_core
-      run: cargo clean -p game_core
-    - name: Incremental rebuild
-      run: cargo build --timings
-    - name: Upload timings
-      uses: actions/upload-artifact@v3
-      with:
-        name: cargo-timing
-        path: target/cargo-timings/cargo-timing*.html
+      - uses: dtolnay/rust-toolchain@nightly
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --timings
+      - name: Clean app
+        run: cargo clean -p app
+      - name: Incremental rebuild
+        run: cargo build --timings
+      - name: Upload timings
+        uses: actions/upload-artifact@v3
+        with:
+          name: cargo-timing
+          path: target/cargo-timings/cargo-timing*.html
