--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -25,6 +25,7 @@ render = { path = "../render" }
 loader = { path = "../loader"}
 animations = { path = "../animations"}
 app = { path = "../app"}
+levels = { path = "../levels"}
 
 [features]
 default = []
