--- a/levels/Cargo.toml
+++ b/levels/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "time"
+name = "levels"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,8 +7,5 @@ edition = "2021"
 
 [dependencies]
 bevy_ecs.workspace = true
-angle = "0.5.0"
-nalgebra.workspace = true
-uuid.workspace = true
+
 app = { path = "../app" }
-levels = { path = "../levels" }
