--- a/loader/Cargo.toml
+++ b/loader/Cargo.toml
@@ -14,6 +14,7 @@ app = { path = "../app"}
 time = { path = "../time" }
 math = { path = "../math" }
 physics = { path = "../physics" }
+levels = { path = "../levels" }
 scene = { path = "../scene" }
 animations = { path = "../animations" }
 serde = { version = "1.0", features = ["derive"] }
